src/Styles/Project.css
.project {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;

    .projectName {
        font-size: 5vh;
        margin-bottom: 5vh;
        transition: var(--themeTransition);
    }

    >div {
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        width: 100%;
        height: 100%;
        margin-top: 10vh;
        margin-bottom: 5vh;
        background: var(--currentBackgroundOverlay);

        >div {
            display: flex;
            flex-direction: row;
            justify-content: space-around;
            align-items: center;
            width: 100%;

            >div {
                position: relative;
                height: 100%;
                width: 40%;
            }
        }
    }

    .projectSlideContainer {
        display: flex;
        justify-content: start;
        align-items: center;
        height: 50vh;
        border-left: var(--defaultBorder);
        border-right: var(--defaultBorder);
        border-radius: var(--defaultBorderRadius);
        transition: var(--themeTransition);
        overflow: scroll;
        scroll-behavior: smooth;
        -ms-overflow-style: none;
        /* Internet Explorer 10+ */
        scrollbar-width: none;

        /* Firefox, Safari 18.2+, Chromium 121+ */
        >* {
            flex-shrink: 0;
            scroll-snap-align: center;
        }

        >img {
            height: 100%;
            width: 98%;
            padding-left: 1%;
            padding-right: 1%;
            border: none;
            border-color: transparent;
            object-fit: contain;
        }

        &:hover {
            cursor: pointer;
            border-color: var(--currentNavHighlight);
        }

    }


    .projectSlideNav {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        margin-top: 5px;

        >button {
            display: flex;
            justify-content: center;
            align-items: center;
            background: transparent;
            font-size: 30px;
            border: none;
            cursor: pointer;
            color: var(--currentPrimaryFontColor);
            transition: 0.1s;

            &:active {
                transform: scale(0.9);
            }

            &:hover {
                color: var(--currentNavHighlight);
            }

            &:disabled {
                color: gray;
                cursor: not-allowed;
            }

        }

        >div {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: center;
            align-items: center;
            width: 100%;
            margin-left: 5px;
            margin-right: 5px;

        }
    }

    .projectDescription {
        display: flex;
        flex-direction: column;
        justify-content: start;
        align-items: center;
        overflow: scroll;
        height: 50vh;
        border-left: var(--defaultBorder);
        border-right: var(--defaultBorder);
        border-radius: var(--defaultBorderRadius);
        padding-left: 10px;
        padding-right: 10px;

        >p {
            margin: 0;
            padding: 0;
            width: 100%;
            margin-bottom: 10px;
            text-align: left;
            font-weight: normal;
            font-size: 14px;
            color: var(--currentSecondaryFontColor);
            transition: var(--themeTransition);
        }
    }

    .projectLinks {
        position: absolute;
        bottom: 0;
        display: flex;
        flex-direction: row;
        width: 100%;
        justify-content: space-evenly;

        >a {
            display: flex;
            flex-direction: row;
            justify-content: space-between;
            align-items: center;
            border: var(--defaultBorder);
            border-radius: var(--defaultBorderRadius);
            color: whitesmoke;
            padding: 5px;
            margin: 5px;
            font-size: 3vh;
            text-decoration: none;
            cursor: pointer;

            >svg {
                margin-left: 2px;
                margin-right: 5px;
            }

            &:hover {
                text-decoration: underline;
            }
        }
    }

}


@media screen and (max-width: 600px) {

    .project>div {
        height: 90vh;



        >div {
            height: 100%;
            width: 98%;
            flex-direction: column;
            overflow: scroll;
            margin-left: 1%;
            margin-right: 1%;

            >div {
                display: flex;
                flex-direction: column;
                width: 100%;

                &:first-child {
                    height: 55%;
                }
                &:last-child{
                    height:40%
                }
            }
        }
    }


    .projectName {
        font-size: 6vw !important;
        margin: 1vh !important;
    }

    .projectDescription {
        width: 98% !important;
        height: 75% !important;
        border-top: var(--defaultBorder);
        border-bottom: var(--defaultBorder);
        margin-left: 1%;
        margin-right: 1%;
        box-sizing: border-box;

        >p {
            font-size: 3vw !important;
        }
    }

    .projectLinks>a {
        font-size: 3vw;
    }
}

